--- a/_includes/mailing-list.html
+++ b/_includes/mailing-list.html
@@ -1,8 +1,8 @@
 <div class="card border-info" style="margin-top: 50px">
-  <h6 class="card-header no-anchor bg-info text-white" data-toc-skip>Want to learn more Markdown?</h6>
+  <h6 class="card-header no-anchor bg-info text-white" data-toc-skip>Want to learn more about Algowit?</h6>
   <div class="card-body">
     <p class="card-text">
-      Don't stop now! 😎 Drop in to the <a href="">Slack chat room</a> and star the <a href="https://github.com/AlgoWit">GitHub repository</a>. If you liked this and want to receive new Markdown tutorials, enter your email address below. No spam!</p>
+      Don't stop now! 😎 Drop in to the <a href="">Slack chat room</a> and star the <a href="https://github.com/AlgoWit">GitHub repository</a>. If you liked this and want to receive new Algowit tutorials, enter your email address below. No spam!</p>
 
     <form action="" method="post" target="popupwindow" onsubmit="window.open('https://', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
       <div class="form-group" style="margin-top: 20px">
