Fixed mising navbar title

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,6 +11,8 @@
         <a class="nav-item nav-link {% if page.title == 'Publications' %}active{% endif %}" href="/publications/">Publications</a>
         <a class="nav-item nav-link {% if page.title == 'Open Source' %}active{% endif %}" href="/open_source/">Open Source</a>
         <a class="nav-item nav-link {% if page.title == 'Tutorials' %}active{% endif %}" href="/tutorials/">Tutorials</a>
+        <a class="nav-item nav-link {% if page.title == 'Playground' %}active{% endif %}" href="/playground/dist/index.html">Playground</a>
+        
       </div>
     </div>
     <form class="form-inline d-none d-lg-inline-block mt-2 mt-md-0">
